# Althea

./: .env.example  .gitignore  ALTHEA_IMPLEMENTATION_PROMPT.md  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: althea_task.yml
app/: config.py  logging.py  main.py
app/api/: github_webhook.py
app/clients/: github_app.py  github_issues.py  openclaw.py
app/domain/: events.py  models.py  rules.py  transform.py
app/security/: github_signature.py  rate_limit.py  replay_protection.py
app/services/: dispatcher.py  status_sync.py
deploy/: CLOUD_RUN_SETUP.md  COMPUTE_ENGINE_SETUP.md  SECRET_MANAGER_SETUP.md
docker/: openclaw.Dockerfile
docker/scripts/: gh-app-token.js  gh-wrapper.sh
docs/: architecture.md  github-app.md  github-secure-channel.md  github-setup.md  infra.md  openclaw.md  operations.md  tailscale.md
infra/: TERRAFORM_UPDATE_NOTES.md
infra/terraform/: IAM-LEAST-PRIVILEGE.md  README.md  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
openclaw/: openclaw.json
scripts/: backup-openclaw-home.sh  bootstrap_gsm_secrets.sh  check-terraform-vm-state.sh  deep-plan.sh  diagnose-openclaw-memory.sh  entrypoint.sh  gcloud_iap_ssh.sh  install_gcloud_numpy.sh  secure-secret-retriever.sh  validate_github_app_runtime.sh
skills/brainstorm/: SKILL.md  calamander-spec.md  pms-cache-operationalization-spec.md  spec-template.md
skills/pr-feedback-executor/: SKILL.md
skills/secure-git-ops/: SKILL.md
tests/integration/: test_dispatch_flow.py  (+1 more)
(+10 files in other folders)
